# experimental-word-boundary

./: .gitignore  custom_strategies.py  pyproject.toml  test_all.py
libexec/: create-word-break-table.py
word_boundary/: __init__.py  data.py
