[tool.poetry]
name = "word-boundary"
version = "0.1.0"
description = "Unicode word boundary specification"
authors = ["Eddie Antonio Santos <easantos@ualberta.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pytest = "^5.4.3"
hypothesis = "^5.20.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
